Change theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: _s
+Theme Name: DCDC Module Template
 Theme URI: https://wpcom-themes.svn.automattic.com/_s/
 Author: Automattic
 Author URI: http://automattic.com/
