Update paths and resource calls

--- a/inc/less/dcdcBootstrap.less
+++ b/inc/less/dcdcBootstrap.less
@@ -46,7 +46,7 @@
 // Add-ons
 //@import "../add-ons/less/tables.less"; // Example: If you wanted to use the bootstrap tables style;
 
-// Reponsive Layout
+// Reponsive Layout REQUIRES: add-ons/js/bootstrap-collapse.js;
 @import "../bootstrap/less/bootstrap-responsive.less"; // Comment out if you don't need a responsive layout
 
 // Utility classes
