--- a/inc/less/override-variables.less
+++ b/inc/less/override-variables.less
@@ -8,6 +8,7 @@
 
 // Global Resource Path
 @pathToImageDir: '../images';
+@pathToBootstrapImageDir: '../bootstrap/images';
 
 // Grays
 // -------------------------
@@ -132,8 +133,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          @pathToImageDir;
-@iconWhiteSpritePath:     @pathToImageDir;
+@iconSpritePath:          @pathToBootstrapImageDir;
+@iconWhiteSpritePath:     @pathToBootstrapImageDir;
 
 
 // Input placeholder text color
