--- a/inc/less/dcdcBootstrap.less
+++ b/inc/less/dcdcBootstrap.less
@@ -12,7 +12,7 @@
 @import "../bootstrap/less/reset.less";
 
 // Core variables and mixins
-@import "../bootstrap/less/variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "../bootstrap/less/variables.less";
 @import "override-variables.less";
 @import "../bootstrap/less/mixins.less";
 
