--- a/inc/less/override-variables.less
+++ b/inc/less/override-variables.less
@@ -250,16 +250,22 @@
 // --------------------------------------------------
 
 
-// Default 940px grid
+// Default 980/940px grid: 12col, 60px, 20px;
 // -------------------------
-@gridColumns:             12;
-@gridColumnWidth:         60px;
+// Other Grid Settings:
+// 970/950px: 16col, 50px, 10px;
+// 970/950px: 12col, 70px, 10px;
+// 986px/966px: 16col, 51px, 10px; http://robkellas.com/980-grid-system/
+// 1200px/1180px: 15col, 60px, 20px | 995px/955px: 15col, 45px, 20px
+
+@gridColumns:             15;
+@gridColumnWidth:         45px;
 @gridGutterWidth:         20px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
-@gridColumnWidth1200:     70px;
-@gridGutterWidth1200:     30px;
+@gridColumnWidth1200:     60px;
+@gridGutterWidth1200:     20px;
 @gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
 
 // 768px-979px
