--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -51,6 +51,7 @@
 }
 
 // Course Template Styles: Modules & Lessons
+.hidden { display: none; }
 body.modules-lessons {
 	// FSHN
 	&.single-layout {
