--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -11,55 +11,175 @@
 // If navbar is static on top
 @media (min-width: @navbarCollapseWidth) { body { padding-top: 60px; } }
 
-
 // Course Template Styles 
-#main { min-height: 600px; }
-#intro-banner {
-	padding: 25px;
-	background-color: #1B1B1B; color: #FFF;
-	position: relative;
-	#college-branding {
-		min-height: 39px;
-		margin-bottom: 20px;
-		padding-bottom: 20px;
-		border-bottom: 1px solid #FFF;
-		background: url('../images/college-logos.png') no-repeat;
-		&.system { background-position: 0 -521px; }
-		//&.system.light { background-position: 0 5px; border-bottom-color: #000; }
-		&.manoa { background-position: 0 -423px; }
-		//&.manoa.light { background-position: 0 5px; border-bottom-color: #000; }
-		&.hcc { background-position: 0 -620px; height: 78px }
-		//&.hcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
-		&.kcc { background-position: 0 -755px; height: 78px }
-		//&.kcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
+h1.site-title a:visited { color: @linkColor; }
+#main { min-height: 600px;
+	.intro-banner {
+		padding: 25px;
+		background-color: #1B1B1B; color: #FFF;
+		position: relative;
+		.college-branding {
+			min-height: 39px;
+			margin-bottom: 20px;
+			padding-bottom: 20px;
+			border-bottom: 1px solid #FFF;
+			background: url('../images/college-logos.png') no-repeat;
+			&.system { background-position: 0 -521px; }
+			//&.system.light { background-position: 0 5px; border-bottom-color: #000; }
+			&.manoa { background-position: 0 -423px; }
+			//&.manoa.light { background-position: 0 5px; border-bottom-color: #000; }
+			&.hcc { background-position: 0 -620px; height: 78px }
+			//&.hcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
+			&.kcc { background-position: 0 -755px; height: 78px }
+			//&.kcc.light { background-position: 0 5px; border-bottom-color: #000; height: 78px }
+		}
+		.welcome { font-size: 25px; }
+		h1 { font-size: 56px; font-weight: bold; margin: 10px 0 19px 0; }
+		img { margin: 10px 0 0 0; }
+	}
+	.no-content {
+		//height: 200px;
+		padding: 20px 15px;
+		text-align: center;
+		border: 6px dashed #CCC;
+		font-size: 16px;
+		color: @gray;
+		.border-radius(4px); 
+		a {
+			background: none;
+			span.large-icon { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
+			&.create-new { margin: 12px 0; color: @grayDark; font-size: 27px; line-height: 1.2; display: block; clear: both; margin: 0 0 20px 0;
+				&:hover { text-decoration: none; color: @grayDarker; }
+			}
+		}
+	}
+	a.edit-post-link {
+		min-height: 0;
+		width: 25px;
+		height: 25px;
+		display: none;
+		position: absolute;
+		top: 7px;
+		right: 10px;
+		text-indent: -9999px;
+		background: url('../images/edit-gear.png') no-repeat;
 	}
 }
-.no-content {
-	//height: 200px;
-	padding: 20px 15px;
-	text-align: center;
-	border: 6px dashed #CCC;
-	font-size: 16px;
-	color: @gray;
-	.border-radius(4px); 
-	a {
-		background: none;
-		span.large-icon { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
-		&.create-new { margin: 12px 0; color: @grayDark; font-size: 27px; line-height: 1.2; display: block; clear: both; margin: 0 0 20px 0;
-			&:hover { text-decoration: none; color: @grayDarker; }
+
+// @media (max-width: 925px) and (min-width: 768px) {
+// 	#primary { clear: left; }
+// }
+
+// @media (max-width: 1200px) and (min-width: 768px) {
+// 	// #intro-banner { #grid > .core > .span(5); }
+// 	// #primary { #grid > .core > .span(10); }
+// 	body.modules-lessons {
+// 		&.single-layout {
+// 			ol.modules li.module {
+// 				#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+// 				&:nth-child(1) { margin: 0 !important; }
+// 				&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
+// 				&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
+// 			}
+// 		}
+// 	}	
+// }
+
+@media (max-width: 320px) {
+
+}
+
+@media (max-width: 480px) {
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; margin: 0; }
+		ol.modules li.module {
+
+			//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+			width: 100%;
+			//&:nth-child(3n+1) { margin-left: 0; }
+			//&:nth-child(1) { margin: 0 !important; }
+			//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
+			//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
 		}
 	}
 }
-a.edit-post-link {
-	min-height: 0;
-	width: 25px;
-	height: 25px;
-	display: none;
-	position: absolute;
-	top: 7px;
-	right: 10px;
-	text-indent: -9999px;
-	background: url('../images/edit-gear.png') no-repeat;
+
+@media (min-width: 480px) and (max-width: 768px) {
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; margin: 0; }
+		ol.modules li.module {
+
+			//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+			//#grid > .core > .span(5);
+			//float: left;
+			width: 47%;
+			float: left;
+			&:nth-child(2n+2){ margin-left: 15px; }
+			//&:nth-child(3n+1) { margin-left: 0; }
+			//&:nth-child(1) { margin: 0 !important; }
+			//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
+			//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
+		}
+	}
+}
+
+@media (max-width: 979px) and (min-width: 768px) {
+	body.modules-lessons.single-layout {
+		#intro-banner { display: none; }
+		#inline-intro-banner { width: 100%; height: 100%; }
+		#primary { width: 100%; margin: 0; }
+	}
+	#main {
+		.intro-banner {
+			h1 { font-size: 45px; }
+		}
+	}
+	body.modules-lessons {
+		&.single-layout {
+			ol.modules li.module {
+				//#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+				&:nth-child(3n+1) { margin-left: 0; }
+				//&:nth-child(1) { margin: 0 !important; }
+				//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
+				//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
+			}
+		}
+	}
+}
+
+@media (max-width: 1200px) and (min-width: 979px) {
+	#main {
+		.intro-banner {
+			h1 { font-size: 48px; }
+		}
+	}
+	body.modules-lessons {
+		&.single-layout {
+			ol.modules li.module {
+				&:nth-child(1) { display: none; } //#inline-intro-banner
+				//#grid > .core > .span(5); //http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
+				&:nth-child(3n+2) { margin-left: 0; }
+				//&:nth-child(1) { margin: 0 !important; }
+				//&:nth-child(2n+1) { clear: left; margin: 0; } // 1, 3, 5 ...
+				//&:nth-child(3n+1) { margin-left: 15px; } // 1, 4, 7 ...
+			}
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	body.modules-lessons {
+		&.single-layout {
+			ol.modules li.module {
+				&:nth-child(1) { display: none; } //#inline-intro-banner
+				&:nth-child(3n+2) { margin-left: 0; }
+			}
+		}
+	}
 }
 
 // Course Template Styles: Modules & Lessons
@@ -69,15 +189,19 @@ body.modules-lessons {
 		#main { // Increase specificity
 			ol.modules {
 				margin: 0;
-				li.module { list-style: none; margin-bottom: 20px; background-color: @gray; position: relative;
+				li.module {
+						list-style: none;
+						margin-bottom: 20px;
+						background-color: @gray;
+						position: relative;
 					a.edit-post-link { display: none; min-height: 0; }
-					a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0;
+					& > a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
 						.module-count { padding: 10px 15px; background-color: @grayDarker; }
 						.module-title { font-size: 22px; margin: 10px 15px; line-height: 1.3; display: block; }
-						.module-image { margin: 10px 15px; }
+						.module-image { margin: 10px 15px; max-height: 128px; }
 						.module-content { margin: 10px 15px; }
 					}
-					&:nth-child(3n+1) { margin-left: 0; }
+					
 					&.last { background: none; } // Clear background color for "+ Content" list item
 					.no-content {
 						a { background: none; min-height: 0; margin: 20px 0 22px 0; color: @grayDark;
@@ -94,22 +218,31 @@ body.modules-lessons {
 		#main {
 			ol.modules {
 				margin: 0;
-				li.module { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; position: relative;
+				li.module { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; position: relative; padding: 0 0 10px 0;
 					.module-count { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; position: absolute; width: 538px; }
-					.module-image { position: absolute; z-index: -1; background-color: @grayLighter; color: @gray; width: 568px; height: 100%;
+					.module-image { position: absolute; z-index: -1; background-color: @grayLighter; color: @gray; width: 568px; height: 100%; 
 						img { position: absolute; z-index: -1; }
-						.module-image-placeholder { position: absolute; z-index: -1; width: 200px; right: 32px; text-align: center; top: 80px; }
+						.module-image-placeholder {
+							position: absolute;
+							z-index: -1;
+							width: 200px;
+							height: 98px;
+							right: 32px;
+							top: 62px;
+							text-align: center;
+							background: url('../images/image-icon.png') center -5px no-repeat;
+							padding: 18px 0 0 0;
+						}
 					}
 					.module-content-wrapper {
-						background: url('../images/bg-transparent-80.png')
-						repeat-y;
+						background: url('../images/bg-transparent-80.png') repeat-y;
 						max-width: 278px;
 						min-height: 122px;
 						margin: 40px 0 0 0;
 						padding: 12px 15px 10px 15px;
 						hr { border-top: none; border-bottom: none; }
 						.module-title { font-size: 22px; line-height: 1.3; margin: 0 0 10px 0; color: #FFF; }
-						.module-content { margin: 10px 0; color: #FFF; }
+						.module-content { margin: 10px 0 0; color: #FFF; }
 					}
 					ol.lessons {
 						margin: 0;
@@ -128,23 +261,37 @@ body.units-modules-lessons {
 	#main { // Increase specificity
 		ol.units { margin: 0;
 			li.unit { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; background-color: @grayLighter; padding-bottom: 10px;
-				.unit-count { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; }
-				.unit-title { font-size: 26px; margin: 10px; }
+				.unit-title-wrapper { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; overflow: hidden;
+					.unit-count { float: left; margin: 0 10px 0 0; }
+					.unit-title { font-size: 18px; line-height: 20px; margin: 0px; float: left; clear: none; }
+				}
+				&.last { background: none; } // Clear background color for "+ Content" list item
 			}
 		}
 		ol.modules {
 			margin: 10px;
-			li.module { list-style: none;
+			li.module { list-style: none; margin-bottom: 20px; background-color: @gray; position: relative; min-height: 250px;
+				a.edit-post-link { display: none; min-height: 0; z-index: 3; }
+				a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
+					.module-title-wrapper {
+						position: absolute; z-index: 2; width: 240px;
+						padding: 10px 15px; background: url('../images/bg-transparent-80.png') repeat-y;
+						.module-count {  }
+						.module-title { font-size: 22px; line-height: 1.3; display: block; }
+					}
+					.module-image {
+						//img { position: absolute; z-index: -1; }
+						.module-image-placeholder { position: absolute; background: url('../images/image-icon.png') center 45px no-repeat; height: 100%; padding: 170px 15px 0; text-align: center; }
+					}
+					.module-content { margin: 10px 15px; }
+				}
+				&:nth-child(3n+1) { margin-left: 0; }
+				&.last { background: none; } // Clear background color for "+ Content" list item
 				.no-content {
-					a { background: none; min-height: 0; margin: 0 0 42px 0; color: @grayDark;
+					a { background: none; min-height: 0; margin: 20px 0 22px 0; color: @grayDark;
 						&:hover { color: @grayDarker; }
 					}
 				}
-				a { color: @white; display: block; min-height: 184px; background-color: @gray;
-					.module-count { padding: 10px; background-color: @grayDarker; }
-					.module-title { font-size: 26px; margin: 10px; }
-				}
-				&:nth-child(3n+1) { margin-left: 0; }
 			}
 		}
 	}
